finish port